# dummyrepo

./: README.md  pyproject.toml  setup.py
src/dummy_library/: __init__.py  core.py  utils.py
tests/: test_core.py  test_utils.py
