[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dummy-python-library"
version = "0.1.0"
description = "A dummy Python library with AI markers for demonstration purposes."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0" 

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"